# par-stream

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: merge_sort.rs  parallel.rs  parallel_unordered.rs  prefix_sum.rs  scatter_gather.rs  shared_stream.rs  shuffle.rs  tee_zip.rs
src/: base.rs  broadcast.rs  builder.rs  common.rs  config.rs  error.rs  fn_factory.rs  functions.rs  future.rs  future_factory.rs  index_stream.rs  lib.rs  par_stream.rs  pull.rs  rt.rs  scatter.rs  shared_stream.rs  slice.rs  state_stream.rs  stream.rs  tee.rs  try_index_stream.rs  try_par_stream.rs  try_stream.rs  utils.rs
src/builder/: fn_factory.rs  future_factory.rs  mod.rs
src/impls/: mod.rs  stream.rs  try_stream.rs
src/impls/async_std/: mod.rs  stream.rs  try_stream.rs
src/impls/tokio/: mod.rs  stream.rs  try_stream.rs
src/rt/: mod.rs  no_rt.rs  rt_async_std.rs  rt_custom.rs  rt_tokio.rs  runtime.rs
