[package]
name = "par-stream"
description = "Asynchronous parallel streams analogous to rayon"
version = "0.6.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
categories = ["asynchronous"]
documentation = "https://docs.rs/par-stream/"
repository = "https://github.com/jerry73204/par-stream.git"
homepage = "https://github.com/jerry73204/par-stream"
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
features = ["doc-only"]
no-default-features = true

[dependencies]
futures = "0.3.17"
num_cpus = "1.13.0"
async-std = { version = "1.10.0", features = ["unstable"], optional = true }
tokio = { version = "1.13.0", features = ["sync", "macros"] }
pin-project = "1.0.8"
derivative = "2.2.0"
flurry = "0.3.1"
by_address = "1.0.4"
smol = { version = "1.2.5", optional = true }
tokio-stream = "0.1.8"
flume = "0.10.9"

[dev-dependencies]
tokio = { version = "1.13.0", features = ["sync", "macros", "rt-multi-thread", "time"] }
rand = "0.8.4"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
itertools = "0.10.1"
concurrent-slice = "0.1.0"
tokio-stream = { version = "0.1.8", features = ["sync"] }

[features]
runtime-async-std = ["async-std"]
runtime-tokio = ["tokio/rt-multi-thread"]
runtime-smol = ["smol"]
doc-only = ["runtime-tokio", "async-std", "smol"]
