[package]
name = "par-stream"
description = "Asynchronous parallel streams analogous to rayon"
version = "0.10.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
categories = ["asynchronous"]
documentation = "https://docs.rs/par-stream/"
repository = "https://github.com/jerry73204/par-stream.git"
homepage = "https://github.com/jerry73204/par-stream"
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
features = ["doc-only"]
no-default-features = true

[dependencies]
futures = "0.3.19"
num_cpus = "1.13.1"
async-std = { version = "1.10.0", features = ["unstable"], optional = true }
tokio = { version = "1.16.1", features = ["sync", "macros"] }
pin-project = "1.0.10"
derivative = "2.2.0"
by_address = "1.0.4"
flume = "0.10.10"
once_cell = "1.9.0"
dashmap = "5.0.0"
crossbeam = "0.8.1"
parking_lot = "0.12.0"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["sync", "macros", "rt-multi-thread", "time"] }
rand = "0.8.4"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
itertools = "0.10.3"
concurrent-slice = "0.1.0"
structopt = "0.3.26"

[features]
runtime-async-std = ["async-std"]
runtime-tokio = ["tokio/rt-multi-thread"]
# runtime-smol = ["smol"]
doc-only = ["async-std"]
